// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Subslot $subslots 1`] = `
<div
  class="card"
>
  <!---->
</div>
`;

exports[`Subslot Reactive subslots 1`] = `
<div
  class="card"
>
  <div
    class="card-header"
  >
    <div>
      
						Header 1
					
    </div>
  </div>
   
  <div
    class="card-content"
  >
    

					Content 1
				
  </div>
</div>
`;

exports[`Subslot Should emit "no-match" on no match 1`] = `
<div
  class="card"
>
  <div
    class="card-header"
  >
    <!---->
  </div>
</div>
`;

exports[`Subslot Should enforce limit 1`] = `
<div
  class="card"
>
  <div>
    
						Header
					
  </div>
  <div>
    
						Header
					
  </div>
  <div>
    
						Header
					
  </div>
</div>
`;

exports[`Subslot Should enforce offset 1`] = `
<div
  class="card"
>
  <div>
    
						Header 4
					
  </div>
  <div>
    
						Header 5
					
  </div>
  <div>
    
						Header 6
					
  </div>
</div>
`;

exports[`Subslot Should support array index 1`] = `
<div
  class="card"
>
  <div
    class="card-header"
  >
    <div>
      
						Header 3
					
    </div>
    <div>
      
						Header 4
					
    </div>
    <div>
      
						Header 5
					
    </div>
    <div>
      
						Header 6
					
    </div>
    <div>
      
						Header 7
					
    </div>
    <div>
      
						Header 8
					
    </div>
    <div>
      
						Header 9
					
    </div>
    <div>
      
						Header 10
					
    </div>
  </div>
   
  <div
    class="card-content"
  >
    <div>
      
						Header 1
					
    </div>
    <div>
      
						Header 2
					
    </div>
  </div>
</div>
`;

exports[`Subslot Should support array slicing 1`] = `
<div
  class="card"
>
  <div
    class="card-header"
  >
    <div>
      
						Header 3
					
    </div>
    <div>
      
						Header 4
					
    </div>
  </div>
   
  <div
    class="card-content"
  >
    <div>
      
						Header 1
					
    </div>
    <div>
      
						Header 2
					
    </div>
    <div>
      
						Header 5
					
    </div>
    <div>
      
						Header 6
					
    </div>
    <div>
      
						Header 7
					
    </div>
    <div>
      
						Header 8
					
    </div>
    <div>
      
						Header 9
					
    </div>
    <div>
      
						Header 10
					
    </div>
  </div>
</div>
`;

exports[`Subslot Should support filter attributes 1`] = `
<div
  class="card"
>
  <div
    class="card-header"
  >
    <div>
      
						Header
					
    </div>
  </div>
   
  <div
    class="card-content"
  >
    

					Content
				
  </div>
</div>
`;

exports[`Subslot Should support named subslots 1`] = `
<div
  class="card"
>
  <div
    class="card-header"
  >
    <div>
      
						Header
					
    </div>
  </div>
   
  <div
    class="card-content"
  >
    

					Content

					
  </div>
   
  <div
    class="card-footer"
  >
    <div>
      
						Footer
					
    </div>
  </div>
</div>
`;

exports[`Subslot Should use fallback 1`] = `
<div
  class="card"
>
  <div
    class="card-header"
  >
    
							Fallback
						
  </div>
</div>
`;
